# ad-optimization-system

./: init_project.py
.github/workflows/: ci.yml
ad_optimization_platform/infra/: docker-compose.yml
ad_optimization_platform/services/api_gateway/: Dockerfile  main.py  pyproject.toml
ad_optimization_platform/services/api_gateway/app/api/v1/: router.py
ad_optimization_platform/services/api_gateway/app/api/v1/endpoints/: ads.py
ad_optimization_platform/services/api_gateway/app/db/: session.py
ad_optimization_platform/services/api_gateway/app/models/: ad.py
ad_optimization_platform/services/api_gateway/app/schemas/: ad.py
ad_optimization_platform/services/data_ingestion/: google_ads_key.json  googls_ads.yaml  pyproject.toml
ad_optimization_platform/services/data_ingestion/app/core/: config.py
ad_optimization_platform/services/data_ingestion/app/ingestion/: google_ads.py  salesforce.py
