[tool.poetry]
name = "ad-optimization-platform"
version = "0.1.0"
description = "A data-driven ad optimization platform leveraging AI and analytics."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{include = "app" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.109.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.30.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
alembic = "^1.12.1"
httpx = "^0.27.0"
requests = "^2.31.0"
loguru = "^0.7.2"
redis = "^5.0.1"
clickhouse-connect = "^0.6.5"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
celery = "^5.3.6"
tenacity = "^8.2.3"
jinja2 = "^3.1.3"
google-ads = "26.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-mock = "^3.12.0"
black = "^24.2.0"
mypy = "^1.9.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"